# LaVista

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yaml
JavaScript/liblavista/: package-lock.json  package.json  tsconfig.json
JavaScript/liblavista/src/: index.ts
cmake/: docs.cmake  find_deps.cmake
docs/: mkdocs.yml  requirements.txt
docs/docs/: index.md  liblavista.md
examples/: CMakeLists.txt
examples/embedded-iavis/: CMakeLists.txt
examples/embedded-iavis/cpp/: main.cpp
examples/embedded-iavis/ui/: package-lock.json  package.json
examples/embedded-iavis/ui/src/: lavista-globals.d.ts
examples/embedded-iavis/ui/src/layouts/: Layout.astro
examples/embedded-iavis/ui/src/pages/: index.astro
examples/embedded-iavis/ui/src/styles/: global.css
examples/hello-lavista/cpp/: main.cpp
include/LaVista/: LaVista.hpp
spa-template/src/layouts/: Layout.astro
src/: CMakeLists.txt
src/cpp/: LaVista.cpp  display_management.cpp  file_dialogs.cpp  internal.cpp  internal_internal.cpp  spa_bundle.cpp  window_management.cpp
src/cpp/platform/fallback/: window_display_spa_fallback.cpp
src/cpp/platform/linux/: display_management_linux.cpp  spa_bundle_loader_linux.cpp  window_platform_linux.cpp
src/cpp/platform/win64/: display_management_win64.cpp  spa_bundle_loader_win64.cpp  webview_management_win64.cpp  window_platform_win64.cpp
src/hpp/: LaVista_internal.hpp  spa_bundle.hpp
src/hpp/platform/fallback/: LaVista_platform_context.hpp
src/hpp/platform/linux/: LaVista_gtk_webview.hpp  LaVista_platform_context.hpp
src/hpp/platform/win64/: LaVista_platform_context.hpp  LaVista_webview2.hpp
src/modules/: lavista.cppm  lavista.definitions.cppm  lavista.internal.cppm
tests/: CMakeLists.txt
tests/cpp/: main.cpp  sample_test.cpp
